[package]
name = "treee"
version = "0.1.1"
edition = "2024"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "A fast tree command with gitignore support and flexible filtering"
readme = "README.md"
homepage = "https://github.com/Latias94/treee"
repository = "https://github.com/Latias94/treee"
license = "MIT"
keywords = ["tree", "directory", "gitignore", "cli", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "treee"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ignore = "0.4"
colored = "3.0"
anyhow = "1.0"
atty = "0.2"
glob = "0.3"
regex = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
